Implementação das outras moedas no html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             Converter <b>de:</b>
             <select name="" id="">
                 <option value="">R$ Real Brasileiro</option>
+                <option value="">U$ Dólar Americano</option>
+                <option value="">€ Euro</option>
+                <option value=""> £ Libra</option>
             </select>
         </label>
 
@@ -30,6 +33,9 @@
             <select class="select-conversor">
                 <option value="dolar">US$ Dólar Americano</option>
                 <option value="euro">€ Euro</option>
+                <option value="">R$ Real Brasileiro</option>
+                <option value=""> £ Libra</option>
+
             </select>
         </label>
 
