adicionada novas moedas no javascript

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <label for="">
             Converter <b>de:</b>
-            <select name="" id="">
+            <select name="" id="" class="">
                 <option value="">R$ Real Brasileiro</option>
                 <option value="">U$ Dólar Americano</option>
                 <option value="">€ Euro</option>
@@ -33,8 +33,8 @@
             <select class="select-conversor">
                 <option value="dolar">US$ Dólar Americano</option>
                 <option value="euro">€ Euro</option>
-                <option value="">R$ Real Brasileiro</option>
-                <option value=""> £ Libra</option>
+                <option value="real">R$ Real Brasileiro</option>
+                <option value="libra"> £ Libra</option>
 
             </select>
         </label>
